--- a/CSS/Es17/index.html
+++ b/CSS/Es17/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>	 		<!-- documento html5 --> 
 <html lang="it"> 
-	<head> 
+	<head>
 		<meta charset="UTF-8" /> 
-		<title> Modello </title> 
+		<title> CSS </title>
+		<style>
+			p{
+				color:#00FF00;
+				font-family:verdana,helvetica,sans-serif;
+			}
+		</style>
+		<link rel="stylesheet" href="index.css"/>
 	</head>
 	<body> 
-		<h1 align="center"> Questa è la mia prima pagina HTML </h1>
-		<br/>
-		<br/>
-		<p align="center"> Questo è il mio testo di prova </p>
+		<h1 align="center"> CSS </h1>
+		<p style="font-size:30pt; color:red;" align="center"> Questo è un paragrafo di prova </p>
+		<p style="font-size:15pt;"> Questo è un paragrafo di prova </p>
+		<p class="paragrafo2"> Questo è un paragrafo di prova </p>
+		<p class="paragrafo2"> Questo è un paragrafo di prova </p>
+		<div class="div">
+			Ciao
+		</div>
+		<div class="div">
+			
+		</div>
 	</body> 
 </html>
