--- a/CSS/Es17/index.html
+++ b/CSS/Es17/index.html
@@ -17,7 +17,7 @@
 		<p style="font-size:15pt;"> Questo è un paragrafo di prova </p>
 		<p class="paragrafo2"> Questo è un paragrafo di prova </p>
 		<p class="paragrafo2"> Questo è un paragrafo di prova </p>
-		<div class="div">
+		<div>
 			Ciao
 		</div>
 		<div class="div">
