--- a/CSS/Es25 quadro orario/index.html
+++ b/CSS/Es25 quadro orario/index.html
@@ -8,7 +8,7 @@
 	<body> 
 		<h1 align="center"> Orario della classe 3°B </h1>
 		
-		<table width="80%" align="center" border="1">
+		<table align="center" border="1">
 			
 			<tr bgcolor="blue">
 			
