--- a/CSS/Es29 float/index.html
+++ b/CSS/Es29 float/index.html
@@ -2,13 +2,22 @@
 <html lang="it"> 
 	<head> 
 		<meta charset="UTF-8" /> 
-		<title> Modello </title>
+		<title> Es29 </title>
 		<link rel="stylesheet" href="index.css"/> 
 	</head>
 	<body> 
-		<h1 align="center"> Questa è la mia prima pagina HTML </h1>
-		<br/>
-		<br/>
-		<p align="center"> Questo è il mio testo di prova </p>
+		<h1 align="center"> Proprietà Float </h1>
+		<div id="wrapper">
+			<header> Header </header>
+			<nav> Barra di navigazione </nav>
+			<section>
+				<p> Section </p>
+				<article> Article </article>
+				<article> Article </article>
+				<aside> Aside </aside>
+			</section>
+			<footer> Footer </footer>
+		</div>
+		
 	</body> 
 </html>
