--- a/CSS/Es32 SCADA/index.html
+++ b/CSS/Es32 SCADA/index.html
@@ -10,30 +10,34 @@
 <body>
 	<div id="wrapper">
 		<h2 style="text-align:center">My Personal Scada</h2>
-		<div class="comandi">
-	    	<button> Stop </button>
-			<button> Automatico </button>
-			<button> Reset </button>
-			<button> Manuale </button>
-			<button> Led Test </button>
+		<div id="comandi">
+				<button> Stop </button>
+				<button> Automatico </button>
+				<button> Reset </button>
+				<button> Manuale </button>
+				<button> Led Test </button>
+			
+	    	
 		</div>
-		<div class="stati">
-	    	<div> Stop <div> </div> </div>
-			<div> Automatico <div>  </div> </div> 
-			<div> Attesa Stop  <div>  </div> </div> 
-			<div> Manuale  <div> </div> </div> 
-			<div class="led"> 
-				<div> </div> 
-				<div> </div> 
-				<div> </div> 
-				<div> </div> 
+		<div id="stati">
+			<div class="gemma">
+	    		<div> Stop <div> </div> </div> 
+				<div> Automatico <div>  </div> </div> 
+				<div> Attesa Stop  <div>  </div> </div> 
+				<div> Manuale  <div> </div> </div>
 			</div> 
-			<div class="cntCicli"> </div>
+			<div class="cntCicli"> 00 </div>
 			<div class="led"> 
 				<div> </div> 
 				<div> </div> 
 				<div> </div> 
-				<div> </div> 
+				<div> </div>
+				<div> </div>
+				<div> </div>
+				<div> </div>
+				<div> </div>
+			</div> 
+			
 			</div> 
 		</div>
 	</div>
