--- a/HTML 5-CSS 3/Es38 nuovi input tag/index.html
+++ b/HTML 5-CSS 3/Es38 nuovi input tag/index.html
@@ -9,13 +9,43 @@
 		<h1 align="center"> Nuovi input HTML </h1>
 		<form id="wrapper" action="pagina2.html" >
 			<label for="txtUser">Nome: </label>
-			<input type="text" name="txtUser" id="txtUser" pattern="[a-z] {1} [a-z_] {2,19}" title="inserire una stringa lunga tra 2 e 20"/>
+			<input type="text" name="txtUser" id="txtUser" pattern="[a-z] {1} [a-z_] {1,19}" title="inserire una stringa lunga tra 2 e 20"/>
 			<br/><br/>
 			<label for="txtEta">Età: </label>
 			<input type="number" name="txtEta" id="txtEta" min="15" max="90" step="5"/>
 			<br/><br/>
 			<button>Invia</button>
-			
+			<fieldset>
+				<legend>Informazioni personali</legend>
+				<label for="txtColor">Scegli il tuo colore preferito</label>
+				<input type="color" name="txtColor" id="TxtColor"/>
+				<br/><br/>
+				<label for="txtDob">Inserisci la tua data di nascita</label>
+				<input type="date" name="txtDob" id="TxtDob" min="2001-01-01" max="3010-01-01"/>
+				<br/><br/>
+				<label for="txtHeight">Altezza: </label>
+				<input type="number" name="txtHeight" id="txtHeight" min="1.50" max="2.20" step="0.01"/>
+				<br/><br/>
+				<label for="txtHome">Residenza: </label>
+				<input type="text" list="txtlista" name="txtHome" id="txtHome" required/>
+				<datalist id="txtlista">
+					<option>Torino</option>
+					<option>Savona</option>
+					<option>Milano</option>
+					<option>Firenze</option>
+					<option>Pisa</option>
+					<option>Mantova</option>
+					<option>Pescara</option>
+					<option>Otranto</option>
+					<option>Genova</option>
+					<option>Assisi</option>
+				</datalist>
+			</fieldset>
+			<label for="txtConoscenza">Conoscenze informatiche: </label>
+			<br/>
+			<span>1</span>
+			<input type="range" name="txtConoscenza" min="1" max="10" step="1">
+			<span>10</span>
 		</form>
 	</body> 
 </html>
