--- a/JavaScript/Es28 captcha/pagina2.html
+++ b/JavaScript/Es28 captcha/pagina2.html
@@ -1,2 +1,12 @@
-
-  benvenuto nel sito
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+  <body>
+    <h1>Benvenuti nella nostra pagina</h1>
+  </body>
+</html>
